--- a/launcher/index.html
+++ b/launcher/index.html
@@ -68,12 +68,9 @@
 <script language="JavaScript" src="bin-debug/src/test.js"></script>
 <script>
 
-    function getnum(){
-        var num = testGame.getInstance().getnumber();
-        window.JavaScriptInterface.showToast(num);
+    function show(){
+//        testGame.getInstance().showlogo();
     }
-
-    window['inter'] = getnum();
 
 </script>
 
