--- a/launcher/index.html
+++ b/launcher/index.html
@@ -64,15 +64,20 @@
         alert("Egret dose not support your current browser")
     }
 </script>
+
 <script type="text/javascript"></script>
-<script language="JavaScript" src="bin-debug/src/test.js"></script>
 <script>
 
-    function show(){
-//        testGame.getInstance().showlogo();
+    //alert(ip);
+    window['calland'] = function(){
+        window.JavaScriptInterface.showToast("fsdafdsa");
     }
+    window['test'] = "fdsafdsafdsafdsa";
+
+
 
 </script>
+
 
 </body>
 </html>
