--- a/release/html5/1451291852/index.html
+++ b/release/html5/1451291852/index.html
@@ -53,19 +53,19 @@
     }
 </script>
 
-<script type="text/javascript"></script>
-<script language="JavaScript" src="launcher/game-min.js"></script>
 <script>
 
-    function getnum(){
-        var num = testGame.getInstance().getnumber();
-        //JavaScriptInterface.showToast(num);
+    window['calland'] = function(){
+        window.JavaScriptInterface.showToast("fsdafdsa");
     }
 
-    window['inter'] = getnum();
+    function sum(){
+        //alert("test");
+    }
+
+    //window['test'] = ;
 
 </script>
-
 
 </body>
 </html>
